--- a/YF/styles/main.css
+++ b/YF/styles/main.css
@@ -181,13 +181,22 @@ color: white;
 @media (max-width: 768px) {
 	.questions .phone {
 		text-align: left;
-		width: 32%;
-		font-size: 2em;
-		margin-top: 6px;
 	}
 	.questions .text {
 		text-align: left;
-		width: 68%;
+	}
+}
+
+@media (max-width: 420px) {
+	.questions .phone {
+		text-align: left;
+		width: 100%;
+		font-size: 1.8em;
+	}
+	.questions .text {
+		text-align: left;
+		width: 100%;
+		font-size: 1.8em;
 	}
 }
 
